fixed #bgHolder not covering entire background
-1px should be enough, however to make sure I made it -5px instead.

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -221,11 +221,11 @@ button:active {filter: brightness(90%)}
 img {pointer-events: none}
 
 #bgHolder {
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: -1;
+	top: -5px;
+	left: -5px;
+	right: -5px;
+	bottom: -5px;
+	z-index:  -1;
 	position: absolute;
 	background-size: cover;
 	background-position: center;
